--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                     Bringing technologhy into powerful corporate product development.</span></p>
             <div id="social-links"><a href="https://www.facebook.com/thanhvi.huynh.792/"><i class="fab fa-facebook-f stroke-transparent"></i></a><a><i
                         class="fab fa-twitter stroke-transparent"></i></a><a><i
-                        class="fab fa-linkedin-in stroke-transparent"></i></a><a><i
+                        class="fab fa-linkedin-in stroke-transparent"></i></a><a href="https://github.com/HTV-DT"><i
                         class="fab fa-github stroke-transparent"></i></a></div>
             <a id="edit-intro" href="#"><i class="fas fa-pen-alt blue"></i>&nbsp;&nbsp;Info</a>
             <hr width="100%">
